Modificaciones para ver si funciona el crear report por medio de postman
